src/components/navbar/Navbar.module.scss
.navbar {
  width: 100%;
  /* margin-bottom: 5rem; */
  background-color: white;
  position: fixed;
  top: 0;
  z-index: 100000;

  padding: 0.5rem 4rem;

  display: flex;
  justify-content: center;
  align-items: center;
  border-bottom: 1px solid rgba(0,0,0,0.25);
  /* gap: 5rem; */

  height: 6.5rem;
}

.navbar img {
  scale: 2;
  position: absolute;
  left: 10rem;
  /* margin-right: auto; */
  /* margin-right: 1rem; */
}

.navbar a {
  font-size: 1.5rem;
  /* color: var(--primary-color); */
  color: var(--black);
  text-transform: uppercase;
  text-decoration: none;
  font-weight: bold;
  position: relative;

  display: inline-block;
  margin: 1.5rem;
  padding-bottom: 0.2rem;

  /* ! NAV LINK HOVER EFFECT */
  /* background:
  linear-gradient(
    to right,
    rgb(254, 168, 47, 0),
    rgb(254, 168, 47, 0)
  ),
  linear-gradient(
    to right,
    rgb(254, 168, 47, 1),
    rgb(69, 163, 217, 1)
  );
  background-size: 100% 2.5px, 0 2.5px;
  background-position: 100% 100%, 0 100%;
  background-repeat: no-repeat;
  transition: background-size 400ms; */
}

.navbar a:first-of-type {
  /* margin-left: auto; */
}

/* .navbar a:hover {
  background-size: 0 2.5px, 100% 2.5px;
} */

.navbar a.active {
  /* background:
  linear-gradient(
    to right,
    rgb(254, 168, 47, 0),
    rgb(254, 168, 47, 0)
  ),
  linear-gradient(
    to right,
    rgb(254, 168, 47, 1),
    rgb(69, 163, 217, 1)
  );
  background-size: 0 2.5px, 100% 2.5px;
  background-position: 100% 100%, 0 100%;
  background-repeat: no-repeat;
  transition: background-size 400ms; */
}

/* ! THIS CLASS IS USED BY FRAMER-MOTION */
.underline {
  position: absolute;
  bottom: -3px;
  left: 0;
  right: 0;
  height: 2px;
  background: #fea82f
  /* background: rgb(69, 163, 217, 0.75); */
}

@media (max-width: 1300px) {
  .navbar {
    justify-content: flex-end;
  }
}

 .navbar button {
  height: 5rem;
  outline: none;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  cursor: pointer;
  /* position: absolute; */
  top: 18px;
  left: 15px;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background: transparent;
}

 .navbar button svg {
  margin-top: 1rem;
 }


// ! SIDE NAV
.side-nav {
  position: absolute;
  z-index: 50000;
  top: 6.5rem;
  left: 0;
  width: 100%;
  background-color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 2rem;
  padding: 2rem;
  gap: 1rem;

  a {
    white-space: nowrap;
    font-size: 1.5rem;
    color: var(--black);
    text-transform: uppercase;
    text-decoration: none;
    font-weight: bold;
    position: relative;

    display: inline-block;
    margin: 1.5rem;
    padding-bottom: 0.2rem;

  }

  .underline {
    color: rebeccapurple !important;
  }
}

